# ML-QLS

./: .gitignore  CMakeLists.txt  README.md  run_heuristic.py  run_im.sh  run_mlqls.py  run_qaoa.sh  run_qaoa1.sh  run_qasm.sh  run_qasm2.sh  run_queko.sh  run_queko_large.sh  run_queko_large_400.sh  run_queko_large_sabre.sh  run_sabre.sh
app/: main.cpp
data_arXiv_2210.08039/: generate_csv.py  sabre_results.csv  sabre_results_4t.csv
data_arXiv_2210.08039/ML-QLS_log/qaoa/: eagle_qaoa_100_0.out  eagle_qaoa_110_0.out  eagle_qaoa_120_0.out  eagle_qaoa_24_0.out  eagle_qaoa_36_0.out  eagle_qaoa_40_0.out  eagle_qaoa_50_0.out  eagle_qaoa_60_0.out  eagle_qaoa_70_0.out  eagle_qaoa_80_0.out  eagle_qaoa_90_0.out  qaoa_100_0.out  qaoa_110_0.out  qaoa_120_0.out  qaoa_200_0.out  qaoa_24_0.out  qaoa_250_0.out  qaoa_300_0.out  qaoa_350_0.out  qaoa_36_0.out  qaoa_400_0.out  qaoa_40_0.out  qaoa_50_0.out  qaoa_60_0.out  qaoa_70_0.out  qaoa_80_0.out  qaoa_90_0.out
data_arXiv_2210.08039/ML-QLS_log/qasm/: 100_adder_n64.out  100_isling_34.out  100_swap_test_n83.out  121_adder_n118.out  144_bv_140.out  144_cat_130.out  289_bv_280.out  36_adder_n28.out  36_bv_30.out  36_dnn_33.out  36_isling_34.out  36_knn_31.out  36_qft_n29.out  36_wstate_33.out  49_swap_test_n41.out  7_ghz_40.out  81_bv_70.out  81_cat_65.out  81_knn_67.out  eagle_adder_n118.out  eagle_adder_n28.out  eagle_adder_n64.out  eagle_bv_30.out  eagle_bv_70.out  eagle_cat_65.out  eagle_dnn_33.out  eagle_ghz_40.out  eagle_isling_34.out  eagle_isling_98.out  eagle_knn_31.out  eagle_knn_67.out  eagle_qft_n29.out  eagle_swap_test_n41.out  eagle_swap_test_n83.out  eagle_wstate_33.out
data_arXiv_2210.08039/ML-QLS_log/queko/: 225QBT_10CYC_QSE_0105.out  225QBT_15CYC_QSE_0105.out  225QBT_20CYC_QSE_0105.out  225QBT_25CYC_QSE_0105.out  225QBT_30CYC_QSE_0105.out  (+27 more)
data_arXiv_2210.08039/qmap_log/: qmap_100_adder_n64.out  qmap_100_ghz_40.out  qmap_100_qft_n63.out  qmap_36_QV_n32.out  qmap_36_adder_n28.out  qmap_36_isling_34.out  qmap_36_knn_31.out  qmap_36_qft_n29.out
data_arXiv_2210.08039/sabre_log/: 100_adder_n64.out  100_isling_34.out  100_qft_n63.out  121_adder_n118.out  144_bv_140.out  144_cat_130.out  225QBT_10CYC_QSE_0105.out  225QBT_15CYC_QSE_0105.out  225QBT_20CYC_QSE_0105.out  225QBT_25CYC_QSE_0105.out  225QBT_30CYC_QSE_0105.out  225QBT_35CYC_QSE_0105.out  225QBT_40CYC_QSE_0105.out  225QBT_45CYC_QSE_0105.out  225QBT_5CYC_QSE_0105.out  289_bv_280.out  361_knn_341.out  36_QV_n32.out  36_adder_n28.out  36_bv_30.out  36_dnn_33.out  36_isling_34.out  36_knn_31.out  36_qft_n29.out  36_wstate_33.out  400QBT_10CYC_QSE_0105.out  400QBT_15CYC_QSE_0105.out  400QBT_20CYC_QSE_0105.out  400QBT_25CYC_QSE_0105.out  400QBT_30CYC_QSE_0105.out  400QBT_35CYC_QSE_0105.out  400QBT_40CYC_QSE_0105.out  400QBT_45CYC_QSE_0105.out  400QBT_5CYC_QSE_0105.out  48_square_root_45.out  48_square_root_60.out  54QBT_10CYC_QSE_0.out  54QBT_15CYC_QSE_0.out  54QBT_20CYC_QSE_0.out  54QBT_25CYC_QSE_0.out  (+85 more)
data_arXiv_2210.08039/sabre_log_4t/: 100_adder_n64.out  100_isling_34.out  100_qft_n63.out  121_adder_n118.out  144_bv_140.out  144_cat_130.out  289_bv_280.out  361_knn_341.out  36_QV_n32.out  36_adder_n28.out  36_bv_30.out  36_dnn_33.out  36_isling_34.out  36_knn_31.out  36_qft_n29.out  36_wstate_33.out  48_square_root_45.out  54QBT_35CYC_QSE_0.out  54QBT_35CYC_QSE_1.out  54QBT_35CYC_QSE_2.out  54QBT_35CYC_QSE_3.out  54QBT_35CYC_QSE_4.out  54QBT_45CYC_QSE_0.out  54QBT_45CYC_QSE_1.out  54QBT_45CYC_QSE_2.out  54QBT_45CYC_QSE_3.out  54QBT_45CYC_QSE_4.out  7_ghz_40.out  81_bv_70.out  81_cat_65.out  81_knn_67.out  eagle_QV_n32.out  eagle_adder_n118.out  eagle_adder_n28.out  eagle_adder_n64.out  eagle_bv_30.out  eagle_bv_70.out  eagle_cat_65.out  eagle_dnn_33.out  eagle_ghz_40.out  (+50 more)
result/: 225QBT_10CYC_0105_stage0.qasm  225QBT_10CYC_0105_stage1.qasm  225QBT_15CYC_0105_stage0.qasm  225QBT_15CYC_0105_stage1.qasm  225QBT_20CYC_0105_stage0.qasm  225QBT_20CYC_0105_stage1.qasm  225QBT_25CYC_0105_stage0.qasm  225QBT_25CYC_0105_stage1.qasm  225QBT_30CYC_0105_stage0.qasm  225QBT_30CYC_0105_stage1.qasm  225QBT_35CYC_0105_stage0.qasm  225QBT_35CYC_0105_stage1.qasm  225QBT_40CYC_0105_stage0.qasm  225QBT_40CYC_0105_stage1.qasm  225QBT_45CYC_0105_stage0.qasm  225QBT_45CYC_0105_stage1.qasm  225QBT_5CYC_0105_stage0.qasm  225QBT_5CYC_0105_stage1.qasm  32_stage0.qasm  32_stage1.qasm  400QBT_10CYC_0105_stage0.qasm  400QBT_10CYC_0105_stage1.qasm  400QBT_15CYC_0105_stage0.qasm  400QBT_20CYC_0105_stage0.qasm  400QBT_25CYC_0105_stage0.qasm  400QBT_25CYC_0105_stage1.qasm  400QBT_30CYC_0105_stage0.qasm  400QBT_35CYC_0105_stage0.qasm  400QBT_35CYC_0105_stage1.qasm  400QBT_40CYC_0105_stage0.qasm  400QBT_40CYC_0105_stage1.qasm  400QBT_45CYC_0105_stage0.qasm  400QBT_45CYC_0105_stage1.qasm  400QBT_5CYC_0105_stage0.qasm  400QBT_5CYC_0105_stage1.qasm  54QBT_05CYC_QSE_0_stage0.qasm  54QBT_35CYC_QSE_0_stage0.qasm  54QBT_35CYC_QSE_1_stage0.qasm  54QBT_35CYC_QSE_2_stage0.qasm  54QBT_35CYC_QSE_3_stage0.qasm  (+76 more)
src/api/: apiPy.cpp
src/cir/: circuit.cpp  circuit.hpp  gate.hpp
src/clusterer/: clusterer.cpp  clusterer.hpp  clusterer2.cpp  clusterer2.hpp  clusterer3.cpp  clusterer3.hpp
src/device/: device.cpp  device.hpp
src/ds/: dsGlobal.hpp  pqueue.hpp
src/misc/: bitwuzlaTerminator.hpp  global.hpp  timeUsage.cpp  timeUsage.hpp
src/molsq/: molsq.cpp  molsq.hpp
src/olsq2/: olsq2.cpp  olsq2.hpp
src/placer/: initialMapper.cpp  initialMapper.hpp  placer.cpp  placer.hpp  placer_dev.cpp  placer_dev.hpp
src/pyolsq/: __init__.py  apiPy.py  device.py  input.py
src/rolsq2/: rolsq2.cpp  rolsq2.hpp
src/router/: aRouter.cpp  aRouter.hpp  aRouter_dev.cpp  aRouter_dev.hpp
src/stbolsq2/: stbolsq2.cpp  stbolsq2.hpp
src/writer/: writer.cpp  writer.hpp
